Fixes toggle switch spacing.

--- a/web/static/css/partials/_toggle-switch.scss
+++ b/web/static/css/partials/_toggle-switch.scss
@@ -1,5 +1,6 @@
 .toggle-switch {
   display: inline-block;
+  margin-right: 1rem;
   vertical-align: text-bottom;
 
   .input {
